Resume input overflow problem solved
This problem results in overflow of text outside the resume template. A simple change in the css property removes the bug.

--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,7 @@ body {
 	box-shadow: 0px 0px 20px 0px #000;
 	line-height: 1.4em;
 	text-align: left;
+	word-wrap:break-word;
 }
 
 
